--- a/config/services.yaml
+++ b/config/services.yaml
@@ -20,5 +20,9 @@ services:
             - '../src/Entity/'
             - '../src/Kernel.php'
 
+#    App\EventListener_LoginVerifiedListener:
+#        tags:
+#            -{ name: kernel.event_listener, event: security.authentification.success, method: onAuthentificationSuccess, priority: 9 }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
