--- a/.env
+++ b/.env
@@ -42,3 +42,8 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/airbnbible?serverVersion=5.7&charset=
 ###> symfony/mailer ###
 # MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
+
+###> symfony/google-mailer ###
+# Gmail SHOULD NOT be used on production, use it in development only.
+MAILER_DSN=gmail://aqmesk8@gmail.com:totolescargot3345033450@default
+###< symfony/google-mailer ###
