--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.4",
         "bootstrap": "^5.1.3",
         "sass": "^1.49.9"
     }
